--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,25 +13,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Job for Linux
-  build-linux:
+  # This workflow contains a single job called "build"
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
-      # Update GitHub activity in the README
-      - name: GitHub Activity Readme
-        uses: jamesgeorge007/github-activity-readme@v0.4.4
-
-  # Job for Windows
-  build-windows:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
